# mkdocs-towncrier

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/mkdocs_towncrier/: __init__.py
