[project]
name = "mkdocs-towncrier"
version = "0.1.0"
description = "An insanely small plugin to add towncrier changelog draft into mkdocs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.0,<1.7.0",
    "towncrier>=24.7.0,<25.0.0",
]

[project.entry-points."mkdocs.plugins"]
towncrier = "mkdocs_towncrier:TowncrierPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
quote-style = "double"
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # May cause conflicts with the formatter
    "ISC001",  # May cause conflicts with the formatter
    "D203",    # Incompatible with D211
    "D213",    # Incompatible with D212
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = true

